--- a/views/page.html
+++ b/views/page.html
@@ -12,6 +12,7 @@
     <script src="/app.js"></script>
   </head>
   <body>
+    <script data-ad-client="ca-pub-3657038347227759" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <center><a href="/"><img src="https://cdn.glitch.com/d0d30f2a-f73b-4b58-8bb0-86b859b852a6%2Funnamed.png?v=1599328256969" /></a></center>
     <hr />
     <div id="menu"></div>
@@ -22,7 +23,7 @@
         getFrontMenu();
         
         var idCategory = window.location.pathname.split("/").pop();
-        $.post("https://maze-low-hosta.glitch.me/page/" + idCategory, function(data, status){
+        $.post("/page/" + idCategory, function(data, status){
           var jsonData = JSON.parse(data);
           renderFrontPageStories(jsonData);
         });
