--- a/views/article.html
+++ b/views/article.html
@@ -12,8 +12,7 @@
     <script src="/app.js"></script>
   </head>
   <body>
-    <script data-ad-client="ca-pub-3657038347227759" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <center><a href="/"><img src="https://cdn.glitch.com/d0d30f2a-f73b-4b58-8bb0-86b859b852a6%2Funnamed.png?v=1599328256969" /></a></center>
+    <center><a href="/"><img src="https://cdn.glitch.com/d0d30f2a-f73b-4b58-8bb0-86b859b852a6%2Funnamed.png?v=1599328256969" width="70%"/></a></center>
     <hr />
     <div id="menu"></div>
     <hr />
