--- a/views/article.html
+++ b/views/article.html
@@ -16,7 +16,7 @@
     <hr />
     <div id="menu"></div>
     <hr />
-    <b><center><div id="article_title"></div></center></b><br />
+    <b><div id="article_title"></div></b><br />
     <div id="article_content"></div>
     <script>
       $(document).ready(function() {
