--- a/views/admin.html
+++ b/views/admin.html
@@ -24,7 +24,7 @@
     <hr />
     <center><b>CREATE CATEGORY</b></center><br />
   <form id="form_category" action="">
-    <b>TITLE:</b> <input type="text" name="category_title" id="category_title">
+    <b>TITLE:</b> <input type="text" name="category_title" id="category_title" size="70">
     <b>TYPE:</b> <select id="category_type">
     <option value="1">Normal</option>
     <option value="2">List</option>
@@ -35,8 +35,8 @@
     <hr />
     <center><b>CREATE EXTERNAL LINK</b></center><br />
   <form id="form_news" action="">
-    <b>LINK:</b> <input type="text" name="news_link" id="news_link"> <br />
-    <b>TITLE:</b> <input type="text" name="news_title" id="news_title"><br />
+    <b>LINK:</b> <input type="text" name="news_link" id="news_link" size="70"> <br />
+    <b>TITLE:</b> <input type="text" name="news_title" id="news_title" size="70"><br />
     <b>CATEGORY:</b> <span id="news_category" name="news_category"></span><br />
     <b>COLOR:</b> <select id="news_style" name="news_style">
     <option value="1">Black</option>
@@ -51,8 +51,8 @@
     <hr />
     <center><b>CREATE ARTICLE</b></center><br />
   <form id="form_article" action="">
-    <b>TITLE:</b> <input type="text" id="article_title"><br />
-    <b>CONTENT:</b> <textarea id="article_content" rows="4" cols="50"></textarea><br />
+    <b>TITLE:</b> <input type="text" id="article_title" size="70"><br />
+    <b>CONTENT:</b> <textarea id="article_content" rows="10" cols="70"></textarea><br />
     <b>CATEGORY:</b> <span id="article_category"></span><br />
     <b>COLOR:</b> <select id="article_style"><br />
     <option value="1">Black</option>
