--- a/views/edit-content.html
+++ b/views/edit-content.html
@@ -14,9 +14,9 @@
   <body>
     <center><b>EDIT ARTICLE</b></center><br />
   <form id="form_storie" action="">
-    <b>TITLE:</b> <input type="text" name="storie_title" id="storie_title"><br />
-    <b>LINK:</b> <input type="text" name="storie_link" id="storie_link"><br />
-    <b>CONTENT:</b> <textarea id="storie_content" name="storie_content" rows="4" cols="50"></textarea><br />
+    <b>TITLE:</b> <input type="text" name="storie_title" id="storie_title" size="70"><br />
+    <b>LINK:</b> <input type="text" name="storie_link" id="storie_link" size="70"><br />
+    <b>CONTENT:</b> <textarea id="storie_content" name="storie_content" rows="10" cols="70"></textarea><br />
     <b>CATEGORY:</b> <span id="article_category"></span><br />
     <b>DATETIME:</b> <input type="text" name="storie_date" id="storie_date"><br />
     <b>COLOR:</b> <select id="storie_style" name="storie_style">
